# translation-parser

./: .gitignore  Cargo.toml  ar_Auth SPA.json  ar_Workspaces.json  en_Auth SPA.json  en_Workspaces.json
src/: lib.rs  main.rs
src/file_parser/: parser.rs
src/file_udate/: update.rs
