[package]
name = "translate-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap={ version="3.1.6", features=["derive"] }
umya-spreadsheet = "1.0.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde={ version = "1.0.136", features = ["derive"] }
